--- a/src/components/Register/Register.module.scss
+++ b/src/components/Register/Register.module.scss
@@ -2,8 +2,12 @@
 
 .everything {
     left: 4.5%;
+    max-width: 1800px;
+    height: 900px;
     position: relative;
- 
+    overflow-y: hidden;
+    overflow-x: hidden;
+    position: relative;
 }
 .sign_in {
     @include flex(flex-start, flex-start);
@@ -66,12 +70,12 @@
 }
 .createaccounttext{
     top: 700px;
-    left: 42%;
+    left: 42.4%;
     position: absolute;
 }
 .createaccount{
     top: 750px;
-    left: 43%;
+    left: 43.5%;
     position: absolute;
 }
 
